--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,22 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.gallery {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery__img {
+  box-sizing: border-box;
+  width: 100%;
+  border: 2px solid gray;
+  padding: 5px;
+}
+
+.gallery__list {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+}
