--- a/styles/main.css
+++ b/styles/main.css
@@ -14,8 +14,7 @@ body {
 
 .gallery {
   width: 50%;
-  margin-left: auto;
-  margin-right: auto; }
+  margin: 0 auto; }
 
 .gallery__img {
   -webkit-box-sizing: border-box;
